Auth and UI changes
